[package]
name = "regfs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
env_logger = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
winreg = "0.10.1"

[dependencies.windows]
version = "0.39.0"
features = ["Win32_Foundation", "Win32_Storage_ProjectedFileSystem"]
